// 如果使用此注释，则使用proto3; 否则使用proto2
syntax = "proto2";

option java_package = "io.github.dis.iface.api.protobuf";
option java_outer_classname = "Message";

message PutRecordsRequest {
    optional string streamName = 1;
    optional string streamId = 30;
    repeated PutRecordsRequestEntry records = 2;
}

message PutRecordsRequestEntry {
    optional bytes data = 3;
    optional string explicitHashKey = 4;
    optional string partitionKey = 5;
    optional string partitionId = 6;
    optional PutRecordsRequestEntryExtendedInfo extendedInfo = 7;
    optional int64 timestamp = 29;
}

message PutRecordsRequestEntryExtendedInfo {
    required string fileName = 8;
    required string deliverDataId = 9;
    optional bool endFlag = 10 [default = false];
    required int64 seqNum = 11;
}

message PutRecordsResult {
    required int32 failedRecordCount = 21;
    repeated PutRecordsResultEntry records = 22;
}

message PutRecordsResultEntry {
    optional string shardId = 23;
    optional string sequenceNumber = 24;
    optional string errorCode = 25;
    optional string errorMessage = 26;
}


message GetRecordsRequest {
    required string shardIterator = 12;
    optional int32 limit = 13;
}

message GetRecordsResult {
    required string nextShardIterator = 14;
    //    int64 millisBehindLatest =15;
    repeated Record records = 16;
}

message Record {
    optional string partitionKey = 17;
    required string sequenceNumber = 18;
    optional bytes data = 19;
    //	approximateArrivalTimestamp = 20;
    optional int64 timestamp = 27;
    optional string timestampType = 28;
}
